--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,3 +263,43 @@ display: inline-block;
     font-size: 17px;
     line-height: 1.3;
 }
+
+.reach-out {
+   text-align: center;
+   background: #024e76;
+}
+
+.reach-out h2 {
+    color: #fce138;
+}
+
+.reach-out iframe {
+    height: 400px;
+    width: 400px;
+    float: left;
+}
+
+.reach-out div {
+   width: 410px;
+   display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+}
+
+.reach-out h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+
+.reach-out p, .reach-out address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.reach-out a {
+    color: #fce138;
+}
