added flex to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,14 +28,18 @@ header nav {
     margin: 7px 0;
 }
 
-header nav ul li {
-    display: inline;
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
 }
 
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 22px;
+    font-size: 1.55vw;
 }
 
 header h1 {
@@ -56,17 +60,20 @@ footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
-}
+    display: flex;
+    justify-content: space-between;
+
+flex-wrap: wrap;}
 
 footer h2 {
-    display: inline;
+   
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 
 footer div {
-    float: right;
+    display: flex;
     line-height: 1.5;
     text-align: right;
 }
@@ -81,10 +88,9 @@ section {
 
 .hero {
     background-image: url(../images/hero-bg.jpg);
-    height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
+
 }
 
 .hero-form {
