--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,9 @@ section {
     background-image: url(../images/hero-bg.jpg);
     background-size: cover;
     background-position: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 
 }
 
@@ -97,13 +100,14 @@ section {
     color: #024e76;
     background-color: #fce138;
     padding: 20px;
-    width: 500px;
+    width: 40%;
     border-style: solid;
     border-width: 3px;
     border-color: #024e76;
     position: absolute;
     bottom: 120px;
     right: 140px;
+    margin: 3.5%;
 }
 
 .hero-form h3 {
@@ -136,6 +140,21 @@ section {
     padding: 10px 20px;
     font-size: 16px;
     
+}
+
+.hero-cta {
+    color: #fff;
+    font-size: 18px;
+    text-align: right;
+    width: 35%;
+    margin: 3.5%;
+    line-height: 1.3;
+}
+
+.hero-cta h2 {
+    color: #fce138;
+    font-size: 55px;
+    font-style: italic;
 }
 
 .intro {
@@ -308,18 +327,4 @@ display: inline-block;
 
 .reach-out a {
     color: #fce138;
-}
-
-.hero-cta h2 {
-    color: #fce138;
-    font-size: 30px;
-    text-align: left;
-    font-style: italic;
-
-}
-
-.hero-cta p {
-    color: white;
-    font-size: 15px;
-    text-align: left;
 }
