--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,31 +157,28 @@ section {
     font-style: italic;
 }
 
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
 .section-title {
 font-size: 55px;
 color: #024e76;
-margin-bottom: 35px;
-padding: 0 100px 20px 100px;
 border-bottom: 3px solid;
 border-color: #39a6b2;
-display: inline-block;
+padding-bottom: 20px;
+text-align: center;
+margin: 0 auto 35px auto;
+width: 50%;
 }
 
 .primary-border {
@@ -217,7 +214,6 @@ display: inline-block;
 }
 
 .trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -290,7 +286,6 @@ display: inline-block;
 }
 
 .reach-out {
-   text-align: center;
    background: #024e76;
 }
 
@@ -327,4 +322,8 @@ display: inline-block;
 
 .reach-out a {
     color: #fce138;
+}
+
+.flex-row {
+    display: flex;
 }
