--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -93,7 +93,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-
+    align-items: flex-start;
 }
 
 .hero-form {
@@ -148,7 +148,7 @@ section {
     text-align: right;
     width: 35%;
     margin: 3.5%;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -171,7 +171,7 @@ section {
 }
 
 .section-title {
-font-size: 55px;
+font-size: 48px;
 color: #024e76;
 border-bottom: 3px solid;
 border-color: #39a6b2;
@@ -349,4 +349,13 @@ width: 50%;
 
 .flex-row {
     display: flex;
+}
+
+@media screen and (max-width: 980px) {
+}
+
+@media screen and (max-width:768px) {
+}
+
+@media screen and (max-width: 575px) {
 }
