added grid example

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,6 +284,19 @@ width: 50%;
     font-size: 17px;
 }
 
+.service-grid-container {
+    display: grid;
+}
+
+.service-grid-item {
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+}
+
+
 .contact-info {
    background: #024e76;
    display: flex;
@@ -420,6 +433,7 @@ width: 50%;
         flex: 100%;
     }
 }
+
 
 @media screen and (max-width: 575px) {
     .hero-form button {
